--- a/SearchApp/Base.lproj/Main.storyboard
+++ b/SearchApp/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -30,33 +31,61 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Batman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfB-kX-ha7">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Batman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfB-kX-ha7">
                                             <rect key="frame" x="16" y="11" width="343" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="xYO-Kc-cyA"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rwS-bO-6Bh">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rwS-bO-6Bh">
                                             <rect key="frame" x="16" y="49" width="92" height="138"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="92" id="4ok-Q8-e2T"/>
+                                                <constraint firstAttribute="height" constant="138" id="Unp-4c-oM6"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1989-06-23" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pu1-Q9-WEF">
-                                            <rect key="frame" x="116" y="49" width="243" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1989-06-23" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pu1-Q9-WEF">
+                                            <rect key="frame" x="235.5" y="49" width="123.5" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="W1i-ai-Nrv"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iie-Ix-eDf">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iie-Ix-eDf">
                                             <rect key="frame" x="116" y="75" width="243" height="109"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <string key="text">The Dark Knight of Gotham City begins his war on crime with his first major enemy being the clownishly homicidal Joker, who has seized control of Gotham's underworld.</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kC-Vb-F9U">
+                                            <rect key="frame" x="116" y="49" width="114.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="rwS-bO-6Bh" firstAttribute="top" secondItem="UfB-kX-ha7" secondAttribute="bottom" constant="8" id="7eo-G9-S7K"/>
+                                        <constraint firstItem="UfB-kX-ha7" firstAttribute="leading" secondItem="hW3-h4-2T8" secondAttribute="leadingMargin" id="96K-g7-bed"/>
+                                        <constraint firstItem="iie-Ix-eDf" firstAttribute="top" secondItem="pu1-Q9-WEF" secondAttribute="bottom" constant="5" id="EWQ-ZY-3sD"/>
+                                        <constraint firstItem="6kC-Vb-F9U" firstAttribute="top" secondItem="UfB-kX-ha7" secondAttribute="bottom" constant="8" id="FgZ-NR-NqQ"/>
+                                        <constraint firstItem="pu1-Q9-WEF" firstAttribute="top" secondItem="UfB-kX-ha7" secondAttribute="bottom" constant="8" id="Gt3-iL-Jq3"/>
+                                        <constraint firstItem="6kC-Vb-F9U" firstAttribute="leading" secondItem="rwS-bO-6Bh" secondAttribute="trailing" constant="8" id="PJq-qn-2vy"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="iie-Ix-eDf" secondAttribute="bottom" constant="5" id="Y8W-CE-xur"/>
+                                        <constraint firstItem="pu1-Q9-WEF" firstAttribute="trailing" secondItem="hW3-h4-2T8" secondAttribute="trailingMargin" id="YXb-wm-S1O"/>
+                                        <constraint firstItem="iie-Ix-eDf" firstAttribute="trailing" secondItem="hW3-h4-2T8" secondAttribute="trailingMargin" id="idV-9r-1vN"/>
+                                        <constraint firstItem="UfB-kX-ha7" firstAttribute="top" secondItem="hW3-h4-2T8" secondAttribute="topMargin" id="ouy-jR-t4E"/>
+                                        <constraint firstItem="UfB-kX-ha7" firstAttribute="trailing" secondItem="hW3-h4-2T8" secondAttribute="trailingMargin" id="umR-UM-YQv"/>
+                                        <constraint firstItem="rwS-bO-6Bh" firstAttribute="leading" secondItem="hW3-h4-2T8" secondAttribute="leadingMargin" id="wkp-L4-V5p"/>
+                                        <constraint firstItem="iie-Ix-eDf" firstAttribute="leading" secondItem="rwS-bO-6Bh" secondAttribute="trailing" constant="8" id="wsJ-GE-Afq"/>
+                                        <constraint firstItem="pu1-Q9-WEF" firstAttribute="leading" secondItem="6kC-Vb-F9U" secondAttribute="trailing" constant="5" id="xpV-jC-FM9"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="overviewLabel" destination="iie-Ix-eDf" id="zl1-9T-i2x"/>
@@ -81,8 +110,10 @@
                 <customObject id="enU-cJ-4Cz" customClass="MoviesViewModel" customModule="SearchApp" customModuleProvider="target">
                     <connections>
                         <outlet property="networkManager" destination="Qs9-xb-pui" id="pVm-v9-ltF"/>
+                        <outlet property="searchViewModel" destination="Ly8-Nw-qhM" id="dYd-jL-HoN"/>
                     </connections>
                 </customObject>
+                <customObject id="Ly8-Nw-qhM" customClass="SearchViewModel" customModule="SearchApp" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="524" y="123.68815592203899"/>
         </scene>
@@ -118,8 +149,13 @@
                             <outlet property="delegate" destination="D8Y-qb-laC" id="IGa-tr-eDD"/>
                         </connections>
                     </tableView>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="searchViewModel" destination="Ov2-ka-PAJ" id="WDt-c6-VWm"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CHO-GW-3Ok" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="Ov2-ka-PAJ" customClass="SearchViewModel" customModule="SearchApp" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="1266" y="124"/>
         </scene>
